--- a/gps/public/mix-manifest.json
+++ b/gps/public/mix-manifest.json
@@ -1,5 +1,4 @@
 {
     "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css",
-    "/js/map_client.js": "/js/map_client.js"
+    "/css/app.css": "/css/app.css"
 }
